@@ -3,6 +3,8 @@ Revision history for Perl extension Encode::ZapCP1252
 0.21
       - The conversion functions now ignore `undef` arguments and just return
         without doing anything.
+      - Strings are no longer modifed in-place unless the conversion
+        subroutines are called in a void context.
 
 0.20  2010-06-12T00:39:35
       - Added `local` to examples of changing the maping tables.
